Added SRS compatibility for lpi-scan.py
- Scan over gradient scale length and intensity only when "lpi=srs"
- Add threshold intensity equation for SRS in helpers.py
- Remove some post processing from matlab.py that were causing errors
- Add SRSModule to solvers.py; SRSModule and LPIModule now subclass LPIModule
- Note: must manually change module in tpd-opt.py for now

--- a/configs/tpd-scan.yaml
+++ b/configs/tpd-scan.yaml
@@ -41,8 +41,8 @@ grid:
   low_pass_filter: 0.66
   tmax: 15.0ps
   tmin: 0.0ns
-  ymax: 3um
-  ymin: -3um
+  ymax: 0.25um # plus/minus 3um originally, lowered for SRS since SRS is 1D problem
+  ymin: -0.25um
 
 
 parsl:
@@ -50,7 +50,7 @@ parsl:
   nodes: 1
 
 mlflow:
-  experiment: opt-randomphase-64lines
+  experiment: ngub_srs
   run: tpd-scan
 save:
   fields:
