--- a/configs/tpd-opt.yaml
+++ b/configs/tpd-opt.yaml
@@ -41,8 +41,8 @@ grid:
   low_pass_filter: 0.5
   tmax: 100ps
   tmin: 0.0ns
-  ymax: 5um
-  ymin: -5um
+  ymax: 1um
+  ymin: -1um
 
 
 parsl:
@@ -50,8 +50,8 @@ parsl:
   nodes: 4
   walltime: 12:00:00
 mlflow:
-  experiment: opt-64lines-ensembles
-  run: temperature=4000.0-gsl=600.0
+  experiment: srs-opt
+  run: srs-opt-test
 save:
   fields:
     t:
